gestion de partidas

--- a/cliente/views/index.html
+++ b/cliente/views/index.html
@@ -8,9 +8,13 @@
     <script src="cliente/src/asteroides.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
     <script src="cliente/src/cliente.js"></script>
-    <script src="cliente/src/ini.js"></script>    
+    <script src="cliente/src/ini.js"></script> 
 </head>
 <body>
-<div id="espacio" align="center"></div>
+	<div id="partida" align="center"></div>
+	<div id="espacio" align="center"></div>
+	<script type="text/javascript">
+		nombrePartida();
+	</script>
 </body>
 </html>
